--- a/public/table.html
+++ b/public/table.html
@@ -27,6 +27,7 @@
                     <button type="button" class="btn btn-primary btn-lg"><i class="far fa-list-alt"></i> View
                         Table</button>
                         <a href="table.html">Table</a>
+
                 </div>
                 
             </div>
@@ -37,5 +38,14 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
 </body>
+<script type="text/javascript">
+    // Question: What does this code do?
+    $.get("/data/tableData", function(req, res){
+        console.log(req)
+    })
+      // Question: What does this code do??
+
+
+  </script>
 
 </html>
