--- a/public/reserve.html
+++ b/public/reserve.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.11.2/css/all.min.css">
-    <link rel="stylesheet" href="style.css">
+    <!-- <link rel="stylesheet" href="style.css"> -->
     <title>Hot Restaurant</title>
 </head>
 
@@ -31,27 +31,54 @@
                 <form>
                     <div class="form-group">
                       <label for="Name">Name</label>
-                      <input type="Name" class="form-control" id="Name" aria-describedby="Name">
+                      <input id="custName" type="Name" class="form-control" id="Name" aria-describedby="Name">
                       <small id="Name" class="form-text text-muted"></small>
                     </div>
                     <div class="form-group">
                       <label for="PhoneNumber">Phone Number</label>
-                      <input type="Phone Number" class="form-control" id="Phone Number">
+                      <input id="custPhone" type="Phone Number" class="form-control" id="Phone Number">
                     </div>
                     <div class="form-group">
                         <label for="email">Email</label>
-                        <input type="Email" class="form-control" id="Email">
+                        <input id="custEmail" type="Email" class="form-control" id="Email">
                       </div>
                       <div class="form-group">
                         <label for="uniqueID">Unique ID</label>
-                        <input type="uniqueID" class="form-control" id="uniqueID">
+                        <input id="custID" type="uniqueID" class="form-control" id="uniqueID">
                       </div>
-                    <button type="submit" class="btn btn-primary">Submit</button>
+                    <button id="submitBtn" type="submit" class="btn btn-primary">Submit</button>
                   </form>
             </div>
         </div>
     </div>
     </div>
+    <script src="https://code.jquery.com/jquery.js"></script>
+    <script type="text/javascript">
+      $("#submitBtn").on("click", function(event) {
+        event.preventDefault();
+        const newCustomer = {
+          customerName: $("#custName").val().trim(),
+          customerEmail: $("#custEmail").val().trim(),
+          phoneNumber: $("#custPhone").val().trim(),
+          customerID: $("#custID").val().trim()
+        };
+
+        let tableData = [];
+        $.get("/data/tableData", function(req, res) {
+          tableData = req;
+        });
+        let dataToAdd = "";
+        if(tableData.length < 5) {
+          dataToAdd = "/data/tableData";
+        } else {
+          dataToAdd = "/data/WaitinglistData";
+        }
+        $.post(dataToAdd, newCustomer)
+          .then(function(data) {
+            console.log(`Added customer to ${dataToAdd}`);
+          });
+      });
+    </script>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
