update html links

--- a/public/home.html
+++ b/public/home.html
@@ -24,13 +24,10 @@
                 <hr>
                 <br>
                 <div class="col-sm">
-                    <button type="button" class="btn btn-primary btn-lg"><i class="far fa-list-alt"></i> View
+                    <button onclick="window.location.href = 'table.html';"type="button" class="btn btn-primary btn-lg"><i class="far fa-list-alt"></i> View
                         Table</button>
-                        <a href="table.html">Table</a>
-                    <button type="button" class="btn btn-danger btn-lg"><i class="fas fa-calendar-day"></i> Make
+                    <button onclick="window.location.href = 'reserve.html';"type="button" class="btn btn-danger btn-lg"><i class="fas fa-calendar-day"></i> Make
                         Reservations</button>
-                    <a href="reserve.html">Reservation</a>
-                    
                 </div>
             </div>
         </div>
@@ -39,6 +36,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
