--- a/public/table.html
+++ b/public/table.html
@@ -26,16 +26,47 @@
                 <div class="col-sm">
                     <button type="button" class="btn btn-primary btn-lg"><i class="far fa-list-alt"></i> View
                         Table</button>
-                        <a href="table.html">Table</a>
+                    <a href="table.html">Table</a>
                 </div>
-                
+                <br>
+                <div class="card bg-light mb-3" style="max-width: 18rem;">
+                    <h1 class="card-header">Table #1</h1>
+                    <div class="card-body">
+                        <h2 class="card-title"></h2>
+                        <p class="card-text">Some quick example text to build on the card title and make up the bulk of
+                            the card's content.</p>
+                    </div>
+                    <div class="card bg-light mb-3" style="max-width: 18rem;">
+                        <h1 class="card-header">Table #2</h1>
+                        <div class="card-body">
+                            <h2 class="card-title">Light card title</h2>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+
+                    <div class="card bg-light mb-3" style="max-width: 18rem;">
+                        <h1 class="card-header">Table #3</h1>
+                        <div class="card-body">
+                            <h2 class="card-title">Light card title</h2>
+                            <p class="card-text">Some quick example text to build on the card title and make up the bulk
+                                of the card's content.</p>
+                        </div>
+                    </div>
+                    <h1 class="card bg-light mb-3" style="max-width: 18rem;">
+                        <h1 class="card-header">Table #4</h1>
+                        <div class="card-body">
+                          <h2 class="card-title">Light card title</h2>
+                          <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+                        </div>
+                </div>
             </div>
         </div>
-    </div>
     </div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
