--- a/public/reserve.html
+++ b/public/reserve.html
@@ -28,6 +28,7 @@
                     Reservations</button>
                 <a href="reserve.html">Reservation</a>
                 </div>
+                <br>
                 <form>
                     <div class="form-group">
                       <label for="Name">Name</label>
@@ -55,6 +56,7 @@
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <script src="script.js"></script>
 </body>
 
 </html>
